--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 
     <main>
         <!-- Halaman Home -->
-        <div id="home" class="page active">
+        <div id="home" class="page">
             <div class="hero">
                 <h1>Selamat Datang di Layanan Jasa Raharja</h1>
                 <p>Mudahnya akses layanan Jasa Raharja di SAMSAT Sidoarjo</p>
@@ -435,7 +435,7 @@
         </div>
 
         <!-- Halaman Tentang -->
-        <div id="tentang" class="page">
+        <div id="tentang" class="page active">
             <div class="container">
                 <h2>Tentang Sistem Layanan Jasa Raharja</h2>
                 
