--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
         </div>
 
         <!-- Halaman Tentang -->
-        <div id="tentang" class="page active">
+        <div id="tentang" class="page">
             <div class="container">
                 <h2>Tentang Sistem Layanan Jasa Raharja</h2>
                 
@@ -484,7 +484,7 @@
         </div>
 
         <!-- Halaman Layanan -->
-        <div id="layanan" class="page">
+        <div id="layanan" class="page active">
             <div class="container">
                 <h2>Layanan Yang Tersedia</h2>
                 
