--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
         </div>
 
         <!-- Halaman Layanan -->
-        <div id="layanan" class="page active">
+        <div id="layanan" class="page">
             <div class="container">
                 <h2>Layanan Yang Tersedia</h2>
                 
@@ -666,7 +666,7 @@
         </div>
 
         <!-- Halaman Status Klaim -->
-        <div id="status" class="page">
+        <div id="status" class="page active">
             <div class="container">
                 <h2>Cek Status Klaim</h2>
                 
