--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
         </div>
 
         <!-- Halaman Status Klaim -->
-        <div id="status" class="page active">
+        <div id="status" class="page">
             <div class="container">
                 <h2>Cek Status Klaim</h2>
                 
@@ -981,7 +981,7 @@
         </div>
 
         <!-- Halaman Kontak -->
-        <div id="kontak" class="page">
+        <div id="kontak" class="page active">
             <div class="container">
                 <h2>Hubungi Kami</h2>
                 
