--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
         </div>
 
         <!-- Halaman Login -->
-        <div id="login" class="page">
+        <div id="login" class="page active">
             <div class="container">
                 <h2>Login Sistem</h2>
                 
@@ -981,7 +981,7 @@
         </div>
 
         <!-- Halaman Kontak -->
-        <div id="kontak" class="page active">
+        <div id="kontak" class="page">
             <div class="container">
                 <h2>Hubungi Kami</h2>
                 
