--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
         </div>
 
         <!-- Halaman Login -->
-        <div id="login" class="page active">
+        <div id="login" class="page">
             <div class="container">
                 <h2>Login Sistem</h2>
                 
@@ -767,7 +767,7 @@
         </div>
 
         <!-- Halaman Register -->
-        <div id="register" class="page">
+        <div id="register" class="page active">
             <div class="container">
                 <h2>Registrasi Akun</h2>
                 
