--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
         </div>
 
         <!-- Halaman Form Klaim -->
-        <div id="klaim" class="page">
+        <div id="klaim" class="page active">
             <div class="container">
                 <h2>Form Pengajuan Klaim Kecelakaan</h2>
                 
@@ -767,7 +767,7 @@
         </div>
 
         <!-- Halaman Register -->
-        <div id="register" class="page active">
+        <div id="register" class="page">
             <div class="container">
                 <h2>Registrasi Akun</h2>
                 
