--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
         </div>
 
         <!-- Halaman Form Klaim -->
-        <div id="klaim" class="page active">
+        <div id="klaim" class="page">
             <div class="container">
                 <h2>Form Pengajuan Klaim Kecelakaan</h2>
                 
@@ -666,7 +666,7 @@
         </div>
 
         <!-- Halaman Status Klaim -->
-        <div id="status" class="page">
+        <div id="status" class="page active">
             <div class="container">
                 <h2>Cek Status Klaim</h2>
                 
